Some small fixes.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@326 961051c9-f516-0410-bf72-c9f7e237a7b7